--- a/app/src/main/res/layout/printscore.xml
+++ b/app/src/main/res/layout/printscore.xml
@@ -92,7 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/bigTextSize"
-        android:text="멈춤"
+        android:text="리셋"
         app:layout_constraintBottom_toTopOf="@id/textView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
